# rust-bmpf

./: .gitignore  .gitmodules  Cargo.toml  README.md  bench.sh  bench_c.sh  compare_branches.sh  compare_resamplers.sh  rust-toolchain.toml  validate_outputs.sh
bmpf-rs/: .gitignore  Cargo.toml  README.md  run-bpf.sh
bmpf-rs/examples/: bpf.rs  randtest.rs  vehicle.rs
bmpf-rs/src/: aligned_vec.rs  boxmuller.rs  bpfstate.rs  consts.rs  erfinv.rs  lib.rs  sim.rs  simd.rs  types.rs  utils.rs  vehiclestate.rs
bmpf-rs/src/resample/: logm.rs  mod.rs  naive.rs  optimal.rs  regular.rs
bpf/: Cargo.toml
vehicle/: Cargo.toml
ziggurat-rs/: Cargo.toml  README.md  build.rs  compare.sh
ziggurat-rs/examples/: normaltest.rs  polytest.rs
ziggurat-rs/src/: constants.rs  isaac.rs  lib.rs  tables.rs
ziggurat-rs/src/tables/: exponential.rs  mod.rs  normal.rs  polynomial.rs
