[package]
name = "bmpf-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9"
ziggurat-rs = { path = "../ziggurat-rs" }
libc = "0.2"

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }

[features]
default = ["boxmuller"]
erfinv = []
boxmuller = []

# Resampler features
debug-all = ["debug", "debug-heapify", "debug-logm", "debug-logm-search", "debug-naive", "debug-optimal", "debug-regular", "diagnostic-print"]
debug = []
debug-heapify = []
debug-logm = []
debug-logm-search = []
debug-naive = []
debug-optimal = []
debug-regular = []
diagnostic-print = []
