[package]
name = "bmpf-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
ziggurat-rs = { path = "../ziggurat-rs" }

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }

[features]
# Resampler features
debug-all = ["debug", "debug-heapify", "debug-logm", "debug-logm-search", "debug-naive", "debug-optimal", "debug-regular", "diagnostic-print"]
debug = []
debug-heapify = []
debug-logm = []
debug-logm-search = []
debug-naive = []
debug-optimal = []
debug-regular = []
diagnostic-print = []
